codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__custom_status_line_with_voice_strip.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                                                                    "
" voice ● listening                                                          ⌃x mute     /voice stop "
"   mic ▁▁▁▁▁▁  codex ▁▁▁▁▁▁                                                                         "
"                                                                                                    "
"› Ask Codex to do anything                                                                          "
"                                                                                                    "
"                                                                                                    "
"  custom status                                                                                     "
